--- a/Numerical-Lib/Cargo.toml
+++ b/Numerical-Lib/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+packed_simd = "0.3.3"
